# Android-deep-learning-examples

./: README.md
Caffe2-sample/app/: CMakeLists.txt  build.gradle
Caffe2-sample/app/src/main/: AndroidManifest.xml
Caffe2-sample/app/src/main/cpp/: native-lib.cpp  native-lib.h
Caffe2-sample/app/src/main/java/org/uelordi/deepsamples/caffe2/: ClassifyCamera.java  JniManager.java  MainActivity.java
Caffe2-sample/app/src/main/res/layout/: activity_main.xml
Caffe2-sample/app/src/main/res/layout-large/: activity_main.xml
Caffe2-sample/app/src/main/res/layout-xlarge/: activity_main.xml
Caffe2-sample/app/src/main/res/values/: strings.xml
Dlib-deep-sample/app/: CMakeLists.txt  build.gradle
Dlib-deep-sample/app/src/main/: AndroidManifest.xml
Dlib-deep-sample/app/src/main/cpp/: DeepFaceDetection.cpp  DeepFaceDetection.h  fps.h  native-lib.cpp  native-lib.h
Dlib-deep-sample/app/src/main/java/org/uelordi/deepsamples/dlib/: JniManager.java  MainActivity.java  WritePrivateStorage.java
Dlib-deep-sample/app/src/main/res/values/: strings.xml
